common-apps/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    app: grafana
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - grafana.bensonphillips.dev
      secretName: letsencrypt
  ingressClassName: "nginx"
  rules:
    - host: grafana.bensonphillips.dev
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/name: grafana
    app: grafana
  name: grafana
spec:
  ports:
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
  clusterIP: None
